--- a/src/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
+++ b/src/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
@@ -47,7 +47,7 @@
               ng-if="$ctrl.customFilterName != null"
               label="Full text search"
               model="$ctrl.useFullTextSearch"
-              tooltip="Search all fields. Prefix with ! to preform an exclusive search."
+              tooltip="Search all fields. Prefix with ! to perform an exclusive search."
               tooltip-placement="top-right"
               style="margin: 0;"
             />
