fix:Effect Test Effect Aria accessability

--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -738,10 +738,9 @@
                     <div>
                         <a href role="button"
                             aria-label="Open effect menu"
-                            class="effects-actions-btn clickable"
+                            class="effects-actions-btn"
                             uib-tooltip="Open effect menu"
-                            uib-dropdown
-                            uib-dropdown-toggle
+                            uib-dropdown-menu
                             context-menu="getOverflowMenu()"
                             context-menu-on="click"
                             context-menu-class="effect-overflow-menu"
