--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -81,6 +81,7 @@
       type="text/javascript"
       src="../../../node_modules/countup.js/dist/countUp.min.js"
     ></script>
+    <script src="../js/plugins/select.js"></script>
 
     <!-- Iconify ref for MDI icons -->
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
