fix: context headers shifted down

--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -722,7 +722,7 @@
     <!-- Edit Effect Modal -->
     <script type="text/ng-template" id="editEffectModal.html">
       <scroll-sentinel element-class="edit-effect-header"></scroll-sentinel>
-      <div class="edit-effect-header sticky-header">
+      <div class="edit-effect-header sticky-element">
           <div class="modal-header flex-row-center jspacebetween no-before no-after" style="padding-bottom: 0">
               <h4 class="modal-title" style="display:inline;">{{isAddMode ? "Add New Effect" : "Edit Effect"}}</h4>
 
