feat(variables): :sparkles: Added filters and variables for if channel is live
Introduced a new `$isChannelLive`/`$isChannelLive[username]` variable and added filters to Commands and Events to only trigger when the channel is live

n/a

--- a/src/gui/app/directives/modals/commands/addOrEditCustomCommand/addOrEditCustomCommandModal.html
+++ b/src/gui/app/directives/modals/commands/addOrEditCustomCommand/addOrEditCustomCommandModal.html
@@ -198,6 +198,18 @@
                                 />
                                 <div class="control__indicator"></div>
                             </label>
+                            <label class="control-fb control--checkbox"
+                                >Only trigger when channel is live
+                                <tooltip
+                                    text="'When this option is enabled, users will only be able to trigger this command when the channel is live.'"
+                                ></tooltip>
+                                <input
+                                    type="checkbox"
+                                    ng-model="$ctrl.command.onlyTriggerWhenChannelIsLive"
+                                    aria-label="..."
+                                />
+                                <div class="control__indicator"></div>
+                            </label>
                         </div>
                         <div class="controls-fb-inline mt-4">
                             <div class="settings-title">
