fix(hotkeys): fix hotkeys not unregistering when changing active state, pause hotkeys when in the hotkey modal
#3217

--- a/src/gui/app/directives/modals/hotkeys/addOrEditHotkey/addOrEditHotkeyModal.html
+++ b/src/gui/app/directives/modals/hotkeys/addOrEditHotkey/addOrEditHotkeyModal.html
@@ -19,6 +19,7 @@
                 <li>Firebot cannot override hotkeys that are already reserved by other apps. </li>
                 <li>Firebot cannot detect if a hotkey is already in use by another app.</li>
                 <li>If you bind a hotkey to a single letter, you will not be able to type that letter in other applications.</li>
+                <li>Hotkeys are disabled while this modal is open.</li>
             </ul>
         </div>
 
