feat(effects): add option for effect queues to run effects immedately when paused
#3097

--- a/src/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
+++ b/src/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
@@ -178,7 +178,7 @@
                         ></sort-tags-row>
                     </td>
                     <td ng-if="$ctrl.showStatusIndicator">
-                        <status-indicator status="$ctrl.getStatus(item)" />
+                        <status-indicator status="$ctrl.getStatus(item)" enabled-label="$ctrl.statusEnabledLabel" disabled-label="$ctrl.statusDisabledLabel" />
                     </td>
                     <td class="fit-table-drag-handle">
                         <div>
