feat: refactor Dashboard settings (#3205)

--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -317,6 +317,7 @@
     <script type="text/javascript" src="./directives/restrictions/restrictionsSection.js"></script>
     <script type="text/javascript" src="./directives/settings/categories/advanced-settings.js"></script>
     <script type="text/javascript" src="./directives/settings/categories/backups-settings.js"></script>
+    <script type="text/javascript" src="./directives/settings/categories/dashboard-settings.js"></script>
     <script type="text/javascript" src="./directives/settings/categories/database-settings.js"></script>
     <script type="text/javascript" src="./directives/settings/categories/general-settings.js"></script>
     <script type="text/javascript" src="./directives/settings/categories/integration-settings.js"></script>
