feat(quick-actions): new quick action settings

--- a/src/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
+++ b/src/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
@@ -20,6 +20,7 @@
                 class="mr-4"
             />
             <searchbar
+                ng-hide="$ctrl.hideSearch === true"
                 placeholder-text="{{$ctrl.searchPlaceholder}}"
                 query="searchQuery"
                 class="fit-header-search"
