--- a/src/gui/app/index.html
+++ b/src/gui/app/index.html
@@ -763,7 +763,7 @@
             <div class="muted" style="font-size:12.5px;">CURRENT EFFECT:</div>
             <div style="display:flex;align-items: center;">
               <div style="font-size: 20px;font-weight: 100;">{{effectDefinition.definition.name}}</div>
-              <button type="button" ng-click="openNewEffectModal()" class="change-effect-button clickable" style="margin-left: 10px;">Change</button>
+              <button type="button" ng-click="openNewEffectModal()" class="btn btn-sm btn-default ml-4" style="font-size: 10px;">Change</button>
             </div>
           </div>
           
